unpackaged/main/default/objects/Account/fields/End_of_cancellation_period__c.field-meta.xml
<CustomField>
    <fullName>End_of_cancellation_period__c</fullName>
    <description>displays the notice period date of cancellation (date to which cancellations should be entered latest, after this date the contract will be renewed)</description>
    <formula>ADDMONTHS(Subscription_End_Date__c, -Cancellation_Period__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>substracts the value given in the &quot;cancellation period field&quot; from the &quot;subscription end date field&quot;. Please be aware that actual date can be different, if a deviating notice period is not properly set in the &quot;Cancellation period field.</inlineHelpText>
    <label>End of cancellation period</label>
    <type>Date</type>
</CustomField>