unpackaged/main/default/objects/Account/fields/Engagement_Status__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Status__c</fullName>
    <label>Engagement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>No Current Engagement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>