unpackaged/main/default/objects/Account/fields/evaId__c.field-meta.xml
<CustomField>
    <fullName>evaId__c</fullName>
    <description>only for migration needed</description>
    <inlineHelpText>only for migration needed</inlineHelpText>
    <label>evaId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>