unpackaged/main/default/objects/Account/fields/Experience_with_Review_Provider__c.field-meta.xml
<CustomField>
    <fullName>Experience_with_Review_Provider__c</fullName>
    <label>Experience with Review Provider</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trustpilot</fullName>
            </value>
            <value>
                <fullName>Verified Reviews</fullName>
            </value>
            <value>
                <fullName>Reviews.io</fullName>
            </value>
            <value>
                <fullName>Ekomi</fullName>
            </value>
            <value>
                <fullName>Bazaarvoice</fullName>
            </value>
            <value>
                <fullName>Webwinkelkeur</fullName>
            </value>
            <value>
                <fullName>Feedaty</fullName>
            </value>
            <value>
                <fullName>Trustami</fullName>
            </value>
            <value>
                <fullName>Revi</fullName>
            </value>
            <value>
                <fullName>Societé des Avis garantis</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>