unpackaged/main/default/objects/Account/fields/Financial_Situation__c.field-meta.xml
<CustomField>
    <fullName>Financial_Situation__c</fullName>
    <description>only visible for profile &quot;Risk Manager&quot;</description>
    <label>Financial Situation</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>