unpackaged/main/default/objects/Account/fields/First_activity_after_owner_change__c.field-meta.xml
<CustomField>
    <fullName>First_activity_after_owner_change__c</fullName>
    <description>Related to the activities that Sales Reps have created. First activity date after owner change is correctly displayed from 01 July 2020.</description>
    <label>First activity after owner change</label>
    <type>DateTime</type>
</CustomField>