unpackaged/main/default/objects/Account/fields/first_day_of_the_year__c.field-meta.xml
<CustomField>
    <fullName>first_day_of_the_year__c</fullName>
    <description>can be used to schedule jobs to run on the 1st of January only</description>
    <formula>AND(
DAY(TODAY()) = 1,
MONTH(TODAY()) = 1
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>first day of the year</label>
    <type>Checkbox</type>
</CustomField>