unpackaged/main/default/objects/Account/fields/Forderungsbewertung__c.field-meta.xml
<CustomField>
    <fullName>Forderungsbewertung__c</fullName>
    <label>AR Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>no</fullName>
                <default>true</default>
                <label>no</label>
            </value>
            <value>
                <fullName>Debt collection yes</fullName>
            </value>
            <value>
                <fullName>Debt collection no</fullName>
            </value>
            <value>
                <fullName>Insolvency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>