unpackaged/main/default/objects/Account/fields/guarantee_count__c.field-meta.xml
<CustomField>
    <fullName>guarantee_count__c</fullName>
    <description>Number of protections (all shops) in the last 12 months</description>
    <label>Number of Guarantees (last 12 months)</label>
    <summarizedField>shop__c.guarantee_count__c</summarizedField>
    <summaryFilterItems>
        <field>shop__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>0120Y000000R2O1QAK</value>
    </summaryFilterItems>
    <summaryForeignKey>shop__c.company_id__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>