unpackaged/main/default/objects/Account/fields/has_active_membership__c.field-meta.xml
<CustomField>
    <fullName>has_active_membership__c</fullName>
    <formula>Number_of_Customer_Shops__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Active Membership</label>
    <type>Checkbox</type>
</CustomField>