unpackaged/main/default/objects/Account/fields/Has_Activity__c.field-meta.xml
<CustomField>
    <fullName>Has_Activity__c</fullName>
    <description>See if the Account has had any Tasks since the last Owner Change</description>
    <formula>IF(ISBLANK(Last_Activity__c), IF(ISBLANK(Last_Owner_Change__c), true, false), IF(ISBLANK(Last_Owner_Change__c), true, IF(Last_Activity__c &lt; Last_Owner_Change__c, false, true)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Activity</label>
    <type>Checkbox</type>
</CustomField>