unpackaged/main/default/objects/Account/fields/Has_agency__c.field-meta.xml
<CustomField>
    <fullName>Has_agency__c</fullName>
    <formula>IF(Main_partner__c != &quot;&quot;, &quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has agency</label>
    <type>Text</type>
</CustomField>