unpackaged/main/default/objects/Account/fields/Has_Legal_Activity__c.field-meta.xml
<CustomField>
    <fullName>Has_Legal_Activity__c</fullName>
    <formula>IF(
NOT(ISBLANK(Last_Legal_Activity__c)) &amp;&amp; Last_Legal_Activity__c &gt; Last_assignment_to_legal_sales_rep__c, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Legal Activity</label>
    <type>Checkbox</type>
</CustomField>