unpackaged/main/default/objects/Account/fields/has_Reputation_Manager__c.field-meta.xml
<CustomField>
    <fullName>has_Reputation_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <label>has Reputation Manager</label>
    <type>Checkbox</type>
</CustomField>