unpackaged/main/default/objects/Account/fields/Herkunftsland_der_Rechtsform__c.field-meta.xml
<CustomField>
    <fullName>Herkunftsland_der_Rechtsform__c</fullName>
    <label>Country of origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AT</fullName>
                <label>Austria</label>
            </value>
            <value>
                <fullName>BE</fullName>
                <label>Belgium</label>
            </value>
            <value>
                <fullName>BG</fullName>
                <label>Bulgaria</label>
            </value>
            <value>
                <fullName>HR</fullName>
                <label>Croatia</label>
            </value>
            <value>
                <fullName>CY</fullName>
                <label>Cyprus</label>
            </value>
            <value>
                <fullName>CZ</fullName>
                <label>Czech Republic</label>
            </value>
            <value>
                <fullName>DK</fullName>
                <label>Denmark</label>
            </value>
            <value>
                <fullName>EE</fullName>
                <label>Estonia</label>
            </value>
            <value>
                <fullName>FI</fullName>
                <label>Finland</label>
            </value>
            <value>
                <fullName>FR</fullName>
                <label>France</label>
            </value>
            <value>
                <fullName>DE</fullName>
                <label>Germany</label>
            </value>
            <value>
                <fullName>GR</fullName>
                <label>Greece</label>
            </value>
            <value>
                <fullName>HU</fullName>
                <label>Hungary</label>
            </value>
            <value>
                <fullName>IE</fullName>
                <label>Ireland</label>
            </value>
            <value>
                <fullName>IT</fullName>
                <label>Italy</label>
            </value>
            <value>
                <fullName>LV</fullName>
                <label>Latvia</label>
            </value>
            <value>
                <fullName>LT</fullName>
                <label>Lithuania</label>
            </value>
            <value>
                <fullName>LU</fullName>
                <label>Luxembourg</label>
            </value>
            <value>
                <fullName>MT</fullName>
                <label>Malta</label>
            </value>
            <value>
                <fullName>NL</fullName>
                <label>Netherlands</label>
            </value>
            <value>
                <fullName>NO</fullName>
                <label>Norway</label>
            </value>
            <value>
                <fullName>PL</fullName>
                <label>Poland</label>
            </value>
            <value>
                <fullName>PT</fullName>
                <label>Portugal</label>
            </value>
            <value>
                <fullName>RO</fullName>
                <label>Romania</label>
            </value>
            <value>
                <fullName>SK</fullName>
                <label>Slovakia</label>
            </value>
            <value>
                <fullName>SI</fullName>
                <label>Slovenia</label>
            </value>
            <value>
                <fullName>ES</fullName>
                <label>Spain</label>
            </value>
            <value>
                <fullName>SE</fullName>
                <label>Sweden</label>
            </value>
            <value>
                <fullName>CH</fullName>
                <label>Switzerland</label>
            </value>
            <value>
                <fullName>GB</fullName>
                <label>United Kingdom</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>