unpackaged/main/default/objects/Account/fields/Inbound_Type__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Type__c</fullName>
    <label>Inbound Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Callback</fullName>
            </value>
            <value>
                <fullName>Chatter</fullName>
            </value>
            <value>
                <fullName>Demoshop</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Free trial</fullName>
            </value>
            <value>
                <fullName>Contact form</fullName>
                <label>HBS Contact form</label>
            </value>
            <value>
                <fullName>LegalServices</fullName>
            </value>
            <value>
                <fullName>Other units</fullName>
            </value>
            <value>
                <fullName>Trade Fair</fullName>
            </value>
            <value>
                <fullName>Trustbadge</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Scoring</fullName>
            </value>
            <value>
                <fullName>Chatter WhatsApp</fullName>
            </value>
            <value>
                <fullName>Legal_SEO</fullName>
            </value>
            <value>
                <fullName>Legal_SEA/Ads</fullName>
            </value>
            <value>
                <fullName>Legal_Webinar/Event</fullName>
            </value>
            <value>
                <fullName>Legal_RT-FREE</fullName>
            </value>
            <value>
                <fullName>Legal_Call-Routing</fullName>
            </value>
            <value>
                <fullName>Legal_Contact form</fullName>
            </value>
            <value>
                <fullName>Legal_Campaign_Mailing_customers</fullName>
            </value>
            <value>
                <fullName>Legal_Campaign_content</fullName>
            </value>
            <value>
                <fullName>Legal_Social Media</fullName>
            </value>
            <value>
                <fullName>Legal_SME2Legal</fullName>
            </value>
            <value>
                <fullName>Legal_Föhlisch Kanzlei</fullName>
            </value>
            <value>
                <fullName>Legal_Winback</fullName>
            </value>
            <value>
                <fullName>Legal_Empfehlung</fullName>
            </value>
            <value>
                <fullName>Open Profile</fullName>
            </value>
            <value>
                <fullName>Website Check</fullName>
            </value>
            <value>
                <fullName>Legal_Abmahnung Ads</fullName>
                <isActive>false</isActive>
                <label>Legal_Abmahnung Ads</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>