unpackaged/main/default/objects/Account/fields/Industry_Exp_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Industry_Exp_Feedback__c</fullName>
    <label>Industry (Exp. Feedback)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Authorities_and_Public_Administration</fullName>
                <label>Authorities and Public Administration</label>
            </value>
            <value>
                <fullName>Consulting_Auditing_and_Tax</fullName>
                <label>Consulting, Auditing and Tax</label>
            </value>
            <value>
                <fullName>Education_and_Research</fullName>
                <label>Education and Research</label>
            </value>
            <value>
                <fullName>Chemicals_Raw_Materials_and_Mining</fullName>
                <label>Chemicals, Raw Materials and Mining</label>
            </value>
            <value>
                <fullName>Services_and_Handicrafts</fullName>
                <label>Services and Handicrafts</label>
            </value>
            <value>
                <fullName>Energy_and_Environment</fullName>
                <label>Energy and Environment</label>
            </value>
            <value>
                <fullName>Finance_Insurance_and_Real_Estate</fullName>
                <label>Finance, Insurance and Real Estate</label>
            </value>
            <value>
                <fullName>Commerce_and_Trading</fullName>
                <label>Commerce and Trading</label>
            </value>
            <value>
                <fullName>Consumer_goods_and_FMCG</fullName>
                <label>Consumer goods and FMCG</label>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Metal_and_Electronics</fullName>
                <label>Metal and Electronics</label>
            </value>
            <value>
                <fullName>Pharma_Health_Care</fullName>
                <label>Pharma &amp; Health Care</label>
            </value>
            <value>
                <fullName>Tourism_and_Gastronomy</fullName>
                <label>Tourism and Gastronomy</label>
            </value>
            <value>
                <fullName>Transport_and_Logistics</fullName>
                <label>Transport and Logistics</label>
            </value>
            <value>
                <fullName>Associations_and_Organisations</fullName>
                <label>Associations and Organisations</label>
            </value>
            <value>
                <fullName>Marketing_and_Advertising</fullName>
                <label>Marketing and Advertising</label>
            </value>
            <value>
                <fullName>Economics_and_Politics</fullName>
                <label>Economics and Politics</label>
            </value>
            <value>
                <fullName>Telecommunications</fullName>
            </value>
            <value>
                <fullName>Internet_and_Tech</fullName>
                <label>Internet and Tech</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>