unpackaged/main/default/objects/Account/fields/Industry_Risk__c.field-meta.xml
<CustomField>
    <fullName>Industry_Risk__c</fullName>
    <label>Industry (Risk)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consumer Electronics</fullName>
            </value>
            <value>
                <fullName>Precious Metals</fullName>
            </value>
            <value>
                <fullName>Jewelry</fullName>
            </value>
            <value>
                <fullName>Furniture</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>