unpackaged/main/default/objects/Account/fields/Insolvency__c.field-meta.xml
<CustomField>
    <fullName>Insolvency__c</fullName>
    <defaultValue>false</defaultValue>
    <description>only visible to profile &quot;Risk Manager&quot;</description>
    <label>Insolvency</label>
    <type>Checkbox</type>
</CustomField>