unpackaged/main/default/objects/Account/fields/Insolvency_Date__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Date__c</fullName>
    <description>only visible to profile &quot;Risk Manager&quot;</description>
    <label>Insolvency Date</label>
    <type>Date</type>
</CustomField>