unpackaged/main/default/objects/Account/fields/Insolvency_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Insolvency_Reference_Number__c</fullName>
    <description>only visible to profile &quot;Risk Manager&quot;</description>
    <label>Insolvency Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>