unpackaged/main/default/objects/Account/fields/International_exposure__c.field-meta.xml
<CustomField>
    <fullName>International_exposure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>International exposure</label>
    <type>Checkbox</type>
</CustomField>