unpackaged/main/default/objects/Account/fields/Invoice_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_End_Date__c</fullName>
    <description>only used for type = strategic partner - Abrechnungsende</description>
    <inlineHelpText>Only fill if type = strategic partner!</inlineHelpText>
    <label>Invoice End Date</label>
    <type>Date</type>
</CustomField>