unpackaged/main/default/objects/Account/fields/Invoice_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Start_Date__c</fullName>
    <description>only used for type = strategic partner - Abrechnungsbeginn</description>
    <inlineHelpText>Only fill if type = strategic partner!</inlineHelpText>
    <label>Invoice Start Date</label>
    <type>Date</type>
</CustomField>