unpackaged/main/default/objects/Account/fields/Is_Active_CC_Partner__c.field-meta.xml
<CustomField>
    <fullName>Is_Active_CC_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <description>User has logged in into CC at least once.</description>
    <label>Is Active CC Partner</label>
    <type>Checkbox</type>
</CustomField>