unpackaged/main/default/objects/Account/fields/Is_Enterprise__c.field-meta.xml
<CustomField>
    <fullName>Is_Enterprise__c</fullName>
    <formula>AND(CONTAINS ( Owner.UserRole.DeveloperName, &quot;TPS&quot;), CONTAINS(Owner.UserRole.DeveloperName, &quot;Sales&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Enterprise</label>
    <type>Checkbox</type>
</CustomField>