unpackaged/main/default/objects/Account/fields/is_key_account__c.field-meta.xml
<CustomField>
    <fullName>is_key_account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Key Account</label>
    <type>Checkbox</type>
</CustomField>