unpackaged/main/default/objects/Account/fields/is_lift_relevant__c.field-meta.xml
<CustomField>
    <fullName>is_lift_relevant__c</fullName>
    <formula>IF( Min_1_Shop_has_SI__c &gt;0 &amp;&amp; zz_expected_turnover__c &lt; Turnover_by_average_basket__c , true, 
IF(Min_1_Shop_has_SI__c =0 &amp;&amp; zz_expected_turnover__c &lt; Turnover_by_average_shopping_basket__c , true, false) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is lift relevant</label>
    <type>Checkbox</type>
</CustomField>