unpackaged/main/default/objects/Account/fields/is_member__c.field-meta.xml
<CustomField>
    <fullName>is_member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isMember</label>
    <type>Checkbox</type>
</CustomField>