unpackaged/main/default/objects/Account/fields/Is_onboarded__c.field-meta.xml
<CustomField>
    <fullName>Is_onboarded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ein Feld für Kunden bei denen onboarding durch ist</description>
    <label>Is onboarded</label>
    <type>Checkbox</type>
</CustomField>