unpackaged/main/default/objects/Account/fields/Is_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Is_Parent_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>is set to true when account gets set as a parent; is used to display flow component in account lightningpage layouts</description>
    <label>Is Parent Account</label>
    <type>Checkbox</type>
</CustomField>