unpackaged/main/default/objects/Account/fields/is_risk__c.field-meta.xml
<CustomField>
    <fullName>is_risk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Risk</label>
    <type>Checkbox</type>
</CustomField>