unpackaged/main/default/objects/Account/fields/is_shop_keeper__c.field-meta.xml
<CustomField>
    <fullName>is_shop_keeper__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shopkeeper</label>
    <type>Checkbox</type>
</CustomField>