unpackaged/main/default/objects/Account/fields/Issued_Date__c.field-meta.xml
<CustomField>
    <fullName>Issued_Date__c</fullName>
    <description>only visible to profile &quot;Risk Manager&quot;</description>
    <label>Issued Date</label>
    <type>Date</type>
</CustomField>