unpackaged/main/default/objects/Account/fields/jurisdication__c.field-meta.xml
<CustomField>
    <fullName>jurisdication__c</fullName>
    <label>Jurisdication</label>
    <length>255</length>
    <type>Text</type>
</CustomField>