unpackaged/main/default/objects/Account/fields/Kundenart__c.field-meta.xml
<CustomField>
    <fullName>Kundenart__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New customer</fullName>
                <default>true</default>
                <label>New customer</label>
            </value>
            <value>
                <fullName>Returning customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>