unpackaged/main/default/objects/Account/fields/Kundensegment__c.field-meta.xml
<CustomField>
    <fullName>Kundensegment__c</fullName>
    <label>Customer segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SME</fullName>
                <default>true</default>
                <label>SME</label>
            </value>
            <value>
                <fullName>Key Account</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>