unpackaged/main/default/objects/Account/fields/Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity__c</fullName>
    <inlineHelpText>only shows Sales activities</inlineHelpText>
    <label>Last Activity Created</label>
    <type>DateTime</type>
</CustomField>