unpackaged/main/default/objects/Account/fields/Last_Assigned_from__c.field-meta.xml
<CustomField>
    <fullName>Last_Assigned_from__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>last user of an account before owner change</description>
    <label>Last Assigned from</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts_2</relationshipName>
    <type>Lookup</type>
</CustomField>