unpackaged/main/default/objects/Account/fields/Last_assignment_to_legal_sales_rep__c.field-meta.xml
<CustomField>
    <fullName>Last_assignment_to_legal_sales_rep__c</fullName>
    <description>sets date when the legal sales responsible has been set</description>
    <label>Last assignment to legal sales rep</label>
    <type>DateTime</type>
</CustomField>