unpackaged/main/default/objects/Account/fields/Last_assignment_to_sales_rep__c.field-meta.xml
<CustomField>
    <fullName>Last_assignment_to_sales_rep__c</fullName>
    <description>on which date the account was assigned to a sales team member</description>
    <label>Last assignment to sales rep</label>
    <type>DateTime</type>
</CustomField>