unpackaged/main/default/objects/Account/fields/Last_discarded_by__c.field-meta.xml
<CustomField>
    <fullName>Last_discarded_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>last owner who discarded the account</description>
    <label>Last discarded by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>