unpackaged/main/default/objects/Account/fields/Last_Finished_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Last_Finished_Engagement__c</fullName>
    <label>Last Finished Engagement</label>
    <type>Date</type>
</CustomField>