unpackaged/main/default/objects/Account/fields/Last_Legal_Activity__c.field-meta.xml
<CustomField>
    <fullName>Last_Legal_Activity__c</fullName>
    <inlineHelpText>only shows Sales activities</inlineHelpText>
    <label>Last Legal Activity</label>
    <type>DateTime</type>
</CustomField>