unpackaged/main/default/objects/Account/fields/Last_Legal_Consultant_Change__c.field-meta.xml
<CustomField>
    <fullName>Last_Legal_Consultant_Change__c</fullName>
    <description>used for determining the time of the user change (for PO-1558)</description>
    <label>Last Legal Consultant Change</label>
    <type>DateTime</type>
</CustomField>