unpackaged/main/default/objects/Account/fields/Last_Legal_discarded_by__c.field-meta.xml
<CustomField>
    <fullName>Last_Legal_discarded_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Legal discarded by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>