unpackaged/main/default/objects/Account/fields/Last_Legal_discarded_date__c.field-meta.xml
<CustomField>
    <fullName>Last_Legal_discarded_date__c</fullName>
    <label>Last Legal discarded date</label>
    <type>DateTime</type>
</CustomField>