unpackaged/main/default/objects/Account/fields/Last_Legal_Report_sent__c.field-meta.xml
<CustomField>
    <fullName>Last_Legal_Report_sent__c</fullName>
    <description>is filled manually by Legal CSMs</description>
    <label>Last Legal Report sent</label>
    <type>DateTime</type>
</CustomField>