unpackaged/main/default/objects/Account/fields/Last_legal_success_check__c.field-meta.xml
<CustomField>
    <fullName>Last_legal_success_check__c</fullName>
    <label>Last legal success check</label>
    <type>Date</type>
</CustomField>