unpackaged/main/default/objects/Account/fields/Last_lift_case_during_last_365_days__c.field-meta.xml
<CustomField>
    <fullName>Last_lift_case_during_last_365_days__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Last lift case during last 365 days</label>
    <type>Checkbox</type>
</CustomField>