unpackaged/main/default/objects/Account/fields/Last_Opp_Amount__c.field-meta.xml
<CustomField>
    <fullName>Last_Opp_Amount__c</fullName>
    <label>Last Opp Amount</label>
    <summarizedField>Opportunity.amount__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.IsClosed</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>