unpackaged/main/default/objects/Account/fields/Last_Run_CrawLast_Run_Crawler_ShopDomain__c.field-meta.xml
<CustomField>
    <fullName>Last_Run_CrawLast_Run_Crawler_ShopDomain__c</fullName>
    <description>used for MC &quot;Crawler Additional Domain“</description>
    <label>Last Run Crawler Shop Domain</label>
    <type>Date</type>
</CustomField>