unpackaged/main/default/objects/Account/fields/Lead_Management_updated_date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Management_updated_date__c</fullName>
    <description>Time stamp in case of updates due to LM</description>
    <label>Lead Management updated date</label>
    <type>Date</type>
</CustomField>