unpackaged/main/default/objects/Account/fields/Legal_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Legal_Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts6</relationshipName>
    <type>Lookup</type>
</CustomField>