unpackaged/main/default/objects/Account/fields/Legal_Cancellation_reason__c.field-meta.xml
<CustomField>
    <fullName>Legal_Cancellation_reason__c</fullName>
    <label>Legal Cancellation reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Änderungskündigung</fullName>
            </value>
            <value>
                <fullName>Anwaltliche Vertretung</fullName>
            </value>
            <value>
                <fullName>Aufgabe des Shops/Unternehmens</fullName>
            </value>
            <value>
                <fullName>Bad fit</fullName>
            </value>
            <value>
                <fullName>Erwartungen nicht erfüllt</fullName>
            </value>
            <value>
                <fullName>Inkasso</fullName>
            </value>
            <value>
                <fullName>kein Grund genannt</fullName>
            </value>
            <value>
                <fullName>Kostenreduktion</fullName>
            </value>
            <value>
                <fullName>Kundenservice</fullName>
            </value>
            <value>
                <fullName>Migration myTS</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Siegel Mitgliedschaft</fullName>
            </value>
            <value>
                <fullName>Sonderkündigung</fullName>
            </value>
            <value>
                <fullName>Storno</fullName>
            </value>
            <value>
                <fullName>Vorsorgliche Kündigung</fullName>
            </value>
            <value>
                <fullName>Wechsel Mitbewerber</fullName>
            </value>
            <value>
                <fullName>Zahlungsverzug</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>