unpackaged/main/default/objects/Account/fields/Legal_Consultant__c.field-meta.xml
<CustomField>
    <fullName>Legal_Consultant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Consultant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>